--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -24,6 +24,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 
 .nav-title {
@@ -46,4 +47,21 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+
+/* header */
+.header{
+    background-color: #FFF8F3;;
+}
+
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+
+.banner .profile-pic{
+    width: 500px;
+    
+
 }
