--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,20 @@ body {
     padding: 15px 35px;
 }
 
+.sec-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.sec-des {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+
+
+}
 
 /* nav related style */
 nav {
@@ -50,18 +64,60 @@ nav a {
 }
 
 /* header */
-.header{
-    background-color: #FFF8F3;;
+.header {
+    background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 800px 500px;
+
+
 }
 
-.banner{
-    padding: 30px 30px 30px 150px;
+.banner {
+    padding: 30px 30px 0 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+
 }
 
-.banner .profile-pic{
-    width: 500px;
-    
+.banner .profile-pic {
+    width: 700px;
 
+
+
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 0;
+    margin-bottom: 20px;
+
+
+}
+
+.banner-des {
+    margin-bottom: 30px;
+
+}
+
+.banner-content {
+    max-width: 700px;
+}
+
+/* main section styles */
+
+/* about section style */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
 }
