--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -79,7 +79,6 @@ nav a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .banner .profile-pic {
@@ -88,6 +87,11 @@ nav a {
 
 
 }
+.profile{
+    padding right: 500ox;
+}
+   
+
 
 .banner-greeting {
     font-size: 45px;
@@ -115,9 +119,62 @@ nav a {
 
 /* main section styles */
 
+main {
+    max-width: 1300px;
+    margin: auto;
+
+}
+
+main section{
+    margin-top: 130px;
+}
+
 /* about section style */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
+    margin: 130px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+}
+
+/* skills related styles */
+.skills-container {
+    display: flex;
+    gap: 24px;
+
+}
+
+.skill {
+    padding: 30px;
+
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-des{
+    color: #757575;
+}
+
+#what-i-do-des {
+    padding: 30px 250px;
+}
+
+
+/* resume sec style */
+
+.resume-col-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.resume-container{
+    display: flex;
 }
