--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -120,7 +120,7 @@ nav a {
 /* main section styles */
 
 main {
-    max-width: 1300px;
+    max-width: 1000px;
     margin: auto;
 
 }
@@ -131,10 +131,10 @@ main section{
 
 /* about section style */
 .about {
-    padding: 130px;
+    padding: 80px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px;
+    /* margin: 50px; */
 }
 
 .about-info-container {
@@ -163,7 +163,8 @@ main section{
 }
 
 #what-i-do-des {
-    padding: 30px 250px;
+    padding: 30px 100px;
+    margin-top: 0px;
 }
 
 
@@ -177,4 +178,34 @@ main section{
 
 .resume-container{
     display: flex;
+    gap: 50px;
+}
+
+.resume-item-des, .resume-item-ins{
+    color: #757575;
+}
+
+.resume-item-title{
+    margin-bottom: 0px;
+}
+
+.resume-item-ins{
+    margin-top: 0px;
+}
+
+.sec-title{
+    margin-bottom: 30px;
+}
+
+.sec-title2{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 100px;
+}
+
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
 }
