--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -209,3 +209,31 @@ main section{
     text-align: center;
     margin-top: 50px;
 }
+
+/* footer style */
+footer{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 230px;
+    margin-top: 100px;
+}
+
+.footer-col{
+    width: 50%;
+}
+
+.contact input[type="text"], .contact input[type="email"], textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: white;
+    border: none;
+    width: 100%;
+}
+
+.social-links a{
+    margin-right: 25px;
+}
